# dose-rs

./: Cargo.toml
dose/: Cargo.toml
dose-client/: Cargo.toml
dose-client/src/: main.rs
dose-server/: '  Cargo.toml
dose-server/src/: main.rs  server.rs
dose-types/: Cargo.toml
dose-types/examples/: serialize.rs
dose-types/src/: lib.rs
dose/src/: main.rs  server.rs
