[package]
name = "dose"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[dependencies]
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"

tokio-core = "0.1.9"
tokio-io = "0.1.4"
tokio-uds = "0.1.5"
futures = "0.1.16"

reqwest = "0.6.2"
libc = "0.2.30"
url = "1.5.1"

dose-types = { path = "../dose-types" }
