[package]
name = "dose"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[dependencies]
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "1.0.14"

tokio-core = "0.1.17"
tokio-io = "0.1.6"
tokio-uds = "0.1.7"
futures = "0.1.21"

hyper = "0.11.25"
hyper-tls = "0.1.3"

libc = "0.2.40"
url = "1.7.0"

dose-types = { path = "../dose-types" }
